--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .menu-h ul{
     list-style: none;
     padding: 0 25%;
-    background-color: #2E8B57;   
+    background-color: #d17030;   
   }
   
   .menu-h ul li{
