--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
   
   h1{
     font-size: 90px;
-    color: rgb(255, 255, 255);
+    color: #5a2a04;
     margin: 5px 50px 20px;
     margin-top: 3%;
   }
